# swod

./: .travis.yml  CMakeLists.txt  README.md
apps/: CMakeLists.txt  caltech_evaluate.cpp  detect.cpp  detect_mpi.cpp  draw.cpp  get_caltech_annotations.cpp  get_tud_annotations.cpp  get_whitening_transform.cpp  info.cpp  merge_annotations.cpp  test_classifier.cpp  train.cpp  train_classifier.cpp  train_classifier_2.cpp  validate_annotation.cpp
configs/: deep_random_forest.yml  raw_pixel.yml
include/swod/: annotation.hpp  classifier.hpp  classifier_deep_random_forest.hpp  classifier_gbt.hpp  classifier_svm.hpp  data_provider.hpp  data_provider_file_reader.hpp  data_provider_video_capture.hpp  feature.hpp  feature_hof.hpp  feature_hog_dollar.hpp  feature_hog_ocv.hpp  feature_hue.hpp  feature_raw.hpp  gbt.hpp  hog_piotr_toolbox.h  multiple_features.hpp  nms.hpp  nms_meanshift.hpp  nms_pair_max.hpp  random_forest.hpp  sliding_window_detector.hpp  swod.hpp  timing.hpp  type.hpp
src/: CMakeLists.txt  annotation.cpp  classifier_deep_random_forest.cpp  classifier_gbt.cpp  classifier_init.cpp  classifier_svm.cpp  data_provider.cpp  data_provider_file_reader.cpp  data_provider_init.cpp  data_provider_video_capture.cpp  feature.cpp  feature_hof.cpp  feature_hog_dollar.cpp  feature_hog_ocv.cpp  feature_hue.cpp  feature_init.cpp  feature_raw.cpp  gbt.cpp  hog_piotr_toolbox.cpp  multiple_features.cpp  nms_init.cpp  nms_meanshift.cpp  nms_pair_max.cpp  random_forest.cpp  sliding_window_detector.cpp
tests/: CMakeLists.txt  test_annotation.cpp  test_classifier_drf.cpp  test_classifier_gbt.cpp  test_classifier_svm.cpp  test_data_provider_file_reader.cpp  test_data_provider_video_file.cpp  test_feature_raw.cpp  test_nms_meanshift.cpp  test_opencv_hog_feature.cpp  test_piotr_hog_feature.cpp  test_utils.cpp  test_utils.hpp
tests/testdata/: linsvm_classifier.yml  test_video_sample.avi
